MiniC/TP03/tests/students/type_errors/test_unary_minus_wrong_type.c
#include "printlib.h"

int main()
{
    string x;
    int y;
    y = -x;
    return 0;
}

// EXPECTED
// EXITCODE 2
// In function main: Line 7 col 8: invalid type for unary minus operand: string